# SIQCS

./: .gitignore  DEPLOYMENT_GUIDE.md  test_assignment.xlsx  批量删除功能测试指南.md  群组分配导入问题排查指南.md  群组管理Excel导入功能说明.md
backend/: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/core/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_student_email_student_import_batch_and_more.py  0003_student_notification_number.py
backend/docs/: excel_import_guide.md
backend/fixtures/: sample_data.json
backend/groups/: admin.py  models.py  serializers.py  urls.py  views.py
backend/groups/migrations/: 0001_initial.py  0002_alter_groupinfo_options_and_more.py
backend/siqcs_backend/: asgi.py  auth_views.py  settings.py  urls.py  views.py  wsgi.py
frontend/: .gitignore  CLEANUP_SUMMARY.md  README-NEW.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AssignmentPreviewModal.tsx  DeleteSelectedGroupsModal.tsx  DeleteSelectedStudentsModal.tsx  GroupBulkDeleteModal.tsx  GroupFormModal.tsx  GroupStudentsModal.tsx  ProtectedRoute.tsx  StudentBulkDeleteModal.tsx  StudentDetailModal.tsx  StudentFormModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  GroupManagement.tsx  Login.tsx  StudentDetails.tsx  StudentList.tsx  StudentLookup.tsx  StudentProfile.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
