[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hong <zong777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
diff-match-patch = "20241021"
django = "5.2.3"
django-cors-headers = "4.7.0"
django-filter = "25.1"
django-import-export = "4.3.8"
djangorestframework = "3.16.0"
et-xmlfile = "2.0.0"
numpy = "2.3.1"
openpyxl = "3.1.5"
pandas = "2.3.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
pytz = "2025.2"
six = "1.17.0"
sqlparse = "0.5.3"
tablib = "3.8.0"
tzdata = "2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
